# dex

./: .gitignore  .hlint.yaml  Dex.hs  README.md  dex.cabal
.github/workflows/: build.yml
src/: Csv.hs  Fossil.hs  Info.hs  Labels.hs  Main.hs  Svg.hs
