cabal-version:      3.0
name:               dex
version:            0.1.0.0
license:            BSD-2-Clause
author:             Emily Mitchell
build-type:         Simple

executable dex
    main-is:          Main.hs
    hs-source-dirs:   src
    build-depends:    base, svg-tree, filepath, extra, linear, deepseq, tagsoup
    default-language: Haskell2010
    ghc-options:      -W
    if impl(ghc >= 9.8)
        ghc-options:  -Wno-x-partial

    other-modules:
        Csv
        Fossil
        Labels
        Svg
